# CNDLLES

./: README.md  pyproject.toml
JITtrace/: serialize.py  traced_C4_ReExtrap_4x1026Re900_4x2052Re1800_1.pt
Reynolds/: test_C4_midGridReInterp.ipynb
Reynolds/trainedModels/: C4_midGridReInterp_4x1026Re900_4x3078Re2700_0.pt  C4_midGridReInterp_4x1026Re900_4x3078Re2700_1.pt
analysis/: C4_trainedModels_test270.ipynb  calc_freeParams.ipynb
baseline/: baseline_dataAug_extrap_test270.py  baseline_noDataAug_extrap_test270.py  dataAug_Re_extrap.o1251569  job_dataAug.sh  job_noDataAug.sh  noDataAug_Re_extrap.o1212005
baseline/trainedModels/: baseline_dataAug_ReExtrap_4x1026Re900_4x2052Re1800_0.pt  baseline_dataAug_ReExtrap_4x1026Re900_4x2052Re1800_1.pt  baseline_dataAug_ReExtrap_4x1026Re900_4x2052Re1800_2.pt  baseline_dataAug_ReExtrap_4x1026Re900_4x2052Re1800_3.pt  baseline_dataAug_ReExtrap_4x1026Re900_4x2052Re1800_4.pt
coarseGrain/: adc.py  coarsen.py  coarsenAllTimes.py
plotting/: C4vsBaseline_rotStats.txt
plotting/rotContour_C4vsBaseline/: plot_C4vsBaselinevsDNS_rotContour.ipynb
plotting/rotStats_C4vsBaseline/: C4vsBaseline_rotStats.py
src/cndlles/: plot_helpers.py  preprocess.py  torch_arch.py  torch_util.py
training_C4DNN/: Re_extrap.o441960  Re_extrap.py  job_extrap.sh
training_C4DNN/trainedModels/: C4_ReExtrap_4x1026Re900_4x2052Re1800_0.pt  C4_ReExtrap_4x1026Re900_4x2052Re1800_1.pt  C4_ReExtrap_4x1026Re900_4x2052Re1800_2.pt  C4_ReExtrap_4x1026Re900_4x2052Re1800_3.pt  C4_ReExtrap_4x1026Re900_4x2052Re1800_4.pt
